--- a/eam/common/generator/src/main/resources/templates/form.js.vm
+++ b/eam/common/generator/src/main/resources/templates/form.js.vm
@@ -278,7 +278,8 @@ function FormPage() {
 			    layer.closeAll('loading');
 	            if (data.success) {
 	                layer.msg(data.message, {icon: 1, time: 500});
-	                admin.finishPopupCenter();
+					var index=admin.getTempData('#(formDataKey)-popup-index');
+	                admin.finishPopupCenter(index);
 	            } else {
 	                layer.msg(data.message, {icon: 2, time: 1000});
 	            }
